--- a/Lab1/Lab 1.ipynb
+++ b/Lab1/Lab 1.ipynb
@@ -4236,12 +4236,20 @@
    "source": [
     "9. *** Two venues (rubric 1 point) ***\n",
     "\n",
-    "**ACM FAccT (Fairness, Accountability, and Transparency):**\n",
+    "## **ACM FAccT (Fairness, Accountability, and Transparency):**\n",
     "FAccT is directly aligned with measuring disparate treatment across protected or sensitive groups in deployed ML systems. Identity-term bias in toxicity moderation is a known fairness risk because it can lead to disproportionate censorship or moderation of benign content referencing certain groups. Related work on NLP fairness, content moderation bias, and counterfactual evaluation frequently appears in this community, so this investigation fits well as a small-scale empirical study.\n",
     "\n",
-    "**AIES (AAAI/ACM Conference on AI, Ethics, and Society):**\n",
+    "## **AIES (AAAI/ACM Conference on AI, Ethics, and Society):**\n",
     "AIES focuses on the societal implications of AI systems and includes work on bias measurement and mitigation in real-world deployments. Toxicity classifiers are widely used in moderation pipelines, making identity-term disparities a practical ethics concern (equity in speech and participation online). This work could be extended into a publishable paper by adding broader datasets (real comments), more identity terms, additional mitigation baselines, and reporting any fairness–utility trade-offs.\n",
-    "\n"
+    "\n",
+    "## Existing work\n",
+    "In 2021, [SS-BERT](https://arxiv.org/pdf/2109.02691) was published as part of `SS-BERT: MITIGATING IDENTITY TERMS BIAS IN TOXIC COMMENT CLASSIFICATION BY UTILISING THE NOTION OF “SUBJECTIVITY” AND “IDENTITY TERMS”` to address this exact issue. SS-BERT is called that because `(Subdentity-Sensitive BERT where “Subdentity” denotes “subjectivity” and “identity”, thus we call it SS-BERT in short`. It uses a subjectivity score that ranges from 0-1. Tested against datasets of a white supremicist forum \"Stormfront\", Twitter, and Wikipedia. They noted slight improvements in bias of identity terms similar to our own terms, however they not that the subjectivity scores are not accurate and that improvement in those scores would result in better performance in SS-BERT.\n",
+    "\n",
+    "\n",
+    "## Why these communities would care\n",
+    "Any of the effected identities' communities would care about their terms being associated with undue toxicity. More moderation tasks are becoming automated. These systems will be more intelligent with the rise of large scale AI/ML solutions. One aspect of this can be a measure of toxicity whether it is the online metrics used or just part of a larger monitoring system. This falls into the areas of focus for both of these publications who focus on fairness and Ethical usage of AI models. \n",
+    "\n",
+    "This could be the start of a paper and is similar to the SS-BERT model listed above. Instead of auditing BERT for bias, we are tackling Toxic-BERT with a proposal for a similar solution to handle the bias found in the base model"
    ]
   },
   {
@@ -4254,6 +4262,8 @@
     "\n",
     "### LLM policy compliance: citation + prompt summary\n",
     "\n",
+    "ChatGPT was used to generate additional template sentences \n",
+    "\n",
     "LLM usage disclosure (code only):\n",
     "\n",
     "Used ChatGPT for code scaffolding for fairness metric computation and error messsgae description and handling. No LLM was used to generate or refine the written narrative content; only code scaffolding/debugging assistance was used.\n",
@@ -4261,27 +4271,6 @@
     "Prompt summary: “Generate Python code o evaluate identity-term bias in a toxicity classifier, compute group/term mean scores and gaps, and run Kruskal–Wallis and chi-square tests. Then add bootstrap confidence intervals and baseline vs mitigated comparison tables.”\n",
     "\n",
     "Prompt summary: “Suggest plots to visualize baseline vs mitigated disparities and implement matplotlib code.”\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6254af85",
-   "metadata": {},
-   "source": [
-    "# WHATS LEFT TO DO:\n",
-    "\n",
-    "### fill in section 8\n",
-    "\n",
-    "\n",
-    "### Conferences/Journals section needs clean -\n",
-    "\n",
-    "why that community cares\n",
-    "\n",
-    "whether similar works exist there\n",
-    "\n",
-    "could this be a paper? why/why not?\n",
-    "\n",
-    "Add 2–3 sentences total per venue."
    ]
   }
  ],
